--- a/src/App.css
+++ b/src/App.css
@@ -1,47 +1,17 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.blank{
-  color: red;
-}
-
 .container h1{
   font-size: 30px;
   color: grey;
+}
+
+.container h2{
+  font-size: 30px;
+  color: rgb(125, 94, 110);
+  text-decoration: underline;
+}
+.btn-primary{
+  margin-top: 30px;
+}
+
+.navbar {
+  margin-bottom: 15px;
 }
