--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,25 @@
-.container h1{
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,700;1,800&display=swap');
+.container h1 {
   font-size: 30px;
-  color: grey;
+  font-family: 'Baloo Bhai 2', cursive;
 }
 
-.container h2{
+.container h2 {
   font-size: 30px;
-  color: rgb(125, 94, 110);
   text-decoration: underline;
+  font-family: 'Baloo Bhai 2', cursive;
 }
-.btn-primary{
+.btn-primary {
   margin-top: 30px;
+  font-family: 'Baloo Bhai 2', cursive;
 }
 
 .navbar {
   margin-bottom: 15px;
+  font-family: 'Baloo Bhai 2', cursive;
+}
+
+.navbar-brand {
+  font-family: 'Poppins', sans-serif;
 }
